# GUARD

./: README.md  for_review
Experiments/Results/VirusTotalResults/: aspack_org_merged.json  aspack_unpacked_merged_file.json  themida_org_merged_file.json  themida_unpacked_merged_file.json  upx_org_merged_file.json  upx_unpacked_merged_file.json  vmprotect_org_merged_file.json  vmprotect_unpacked_merged_file.json
Experiments/pythoncode/: execute_and_get_result.py
GUARD/: CMakeLists.txt
GUARD/GUARD/: CMakeLists.txt  GUARD.cpp  GUARD.hpp  VMPDump.vcxproj  VMPDump.vcxproj.filters  disassembler.cpp  disassembler.hpp  disassembler_simple.cpp.bak  imports.hpp  instruction.cpp  instruction.hpp  instruction_stream.cpp  instruction_stream.hpp  instruction_utilities.hpp  main.cpp  main_bak.cpp.bak  module_view.cpp  module_view.hpp  pe_constructor.cpp  pe_constructor.hpp  pe_image.hpp  tables.hpp  vmpdump.cpp  vmpdump_bak.cpp.bak
GUARD/GUARD/winpe/: dir_iat.hpp  dir_load_config.hpp  dir_tls.hpp  image.hpp  nt_headers.hpp
GUARD/GUARD/x64/Debug/: vc143.idb
GUARD/GUARD/x64/Debug/VMPDump.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  VMPDump.lastbuildstate
GUARD/GUARD/x64/Release/VMPDump.tlog/: VMPDump.lastbuildstate
